# qrpiweather

./: .df-setup  CMakeLists.txt  dataprovider.cpp  dataprovider.h  filedataprovider.cpp  filedataprovider.h  httpdataprovider.cpp  httpdataprovider.h  httpjsondataprovider.cpp  httpjsondataprovider.h  httpxmldataprovider.cpp  httpxmldataprovider.h  infoclimatparser.cpp  infoclimatparser.h  main.cpp  mycmake-rpi.sh  openweathermapparser.cpp  openweathermapparser.h  qrpiweather.qrc  skippingproxymodel.cpp  skippingproxymodel.h  themeimageprovider.cpp  themeimageprovider.h  view.qml  weatherdata.cpp  weatherdata.h  weathermodel.cpp  weathermodel.h  weatherparserbase.cpp  weatherparserbase.h  wettercomparser.cpp  wettercomparser.h
autotests/: CMakeLists.txt  filedatatest.cpp  infoclimat.json  infoclimatparsertest.cpp  openweathermap-2.json  openweathermap-3.json  openweathermap.json  openweathermapparsertest.cpp  weatherdatatest.cpp  wettercom.xml  wettercomparsertest.cpp
doc/: API  json.txt
